--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   carousel_slider: ^4.2.1
   url_launcher: ^6.1.7
   share_plus: ^6.3.0
+  store_redirect: ^2.0.1
+  fluttertoast: ^8.1.2
+  webview_flutter: ^4.0.1
+  flutter_holo_date_picker: ^1.1.0
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
