--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   webview_flutter: ^4.0.1
   flutter_holo_date_picker: ^1.1.0
   intl: ^0.18.0
+  buttons_tabbar: ^1.3.6
 
 dev_dependencies:
   flutter_test:
@@ -73,6 +74,11 @@ flutter:
     - lib/assets/sahara-bus.png
     - lib/assets/sahara-food.png
     - lib/assets/sahara-logo.png
+    - lib/assets/restro0.jpg
+    - lib/assets/restro1.jpg
+    - lib/assets/restro2.jpg
+    - lib/assets/restro3.jpg
+    
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
