--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   buttons_tabbar: ^1.3.6
   flutter_speed_dial: ^6.2.0
   google_maps_flutter: ^2.2.3
+  geolocator: ^9.0.2
+  latlong2: ^0.8.1
 
 dev_dependencies:
   flutter_test:
