--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   sliding_up_panel: ^2.0.0+1
   flutter_polyline_points: ^1.0.0
   lottie: ^2.2.0
+  firebase_auth: ^4.2.2
+  firebase_core: ^2.4.1
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
