changed padding, added to confrim booking pages

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   firebase_auth: ^4.2.2
   firebase_core: ^2.4.1
   flutter_rating_bar: ^4.0.1
+  vibration: ^1.7.6
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
